--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ h1 {
     text-align: center;
     font-size: 70px;
 }
-   
+
+h2 {
+
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 70px;
+
+}
 
     
