--- a/style2.css
+++ b/style2.css
@@ -1,7 +1,15 @@
 .camgirl {
 
-margin-top: 350px;
-margin-left: 230px;
+margin-top: 335px;
+margin-left: 360px;
 
     
 }
+
+
+    .vide2 {
+
+margin-top: 10px;
+
+
+    }
